--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-gtm-module": "^2.0.11",
     "sass": "^1.55.0",
     "smooth-scrollbar": "^8.8.1",
     "swiper": "^8.4.4"
