--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.38.1",
+    "@types/node": "^20.8.2",
+    "standard": "^17.1.0",
     "vite": "^2.7.0"
   }
 }
