--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-gtm-module": "^2.0.11",
+    "react-phone-number-input": "^3.4.5",
     "sass": "^1.55.0",
     "smooth-scrollbar": "^8.8.1",
     "swiper": "^8.4.4"
